force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/breadwinner_qbo__BW_AP_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Bill or PO Line Items</description>
    <label>Bill / PO Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill &amp; PO Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>