force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Amount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>