force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Bill_PO__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Bill_PO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill / PO</label>
    <referenceTo>breadwinner_qbo__BW_AP_Bill_PO__c</referenceTo>
    <relationshipLabel>Bill &amp; PO Line Items (Bill / PO)</relationshipLabel>
    <relationshipName>Bill_PO_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>