force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Bill_PO_Item__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Bill_PO_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill / PO (Item line)</label>
    <referenceTo>breadwinner_qbo__BW_AP_Bill_PO__c</referenceTo>
    <relationshipLabel>Bill / PO Item Details</relationshipLabel>
    <relationshipName>Bill_PO_Item_Details</relationshipName>
    <type>Lookup</type>
</CustomField>