force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Billable_Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Billable_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>