force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Customer__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>breadwinner_qbo__Breadwinner_Account_Connection__c</referenceTo>
    <relationshipLabel>Bill &amp; PO Line Items</relationshipLabel>
    <relationshipName>Bill_PO_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>