force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Customer_Id__c</fullName>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>