force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Product_Service__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Product_Service__c</fullName>
    <description>Name of Product/Service</description>
    <label>Product/Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>