force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Quantity_2_Decimals__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Quantity_2_Decimals__c</fullName>
    <formula>breadwinner_qbo__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>