force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Quantity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Quantity__c</fullName>
    <label>Quantity (7 Decimals)</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>