force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Tax__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Tax applied?</description>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>