force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Tax_Code__c</fullName>
    <label>Tax Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>