force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/fields/breadwinner_qbo__Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Type__c</fullName>
    <formula>IF( breadwinner_qbo__Bill_PO_Item__c !=null,&quot;Item Line&quot;,IF(breadwinner_qbo__Bill_PO_Account__c!=null,&quot;Account Line&quot;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>