force-app/main/default/objects/breadwinner_qbo__BW_AP_Line_Item__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Bill_PO__c</columns>
    <columns>breadwinner_qbo__Product_Service__c</columns>
    <columns>breadwinner_qbo__AP_AR_Account__c</columns>
    <columns>breadwinner_qbo__Description__c</columns>
    <columns>breadwinner_qbo__Amount__c</columns>
    <columns>breadwinner_qbo__Billable_Status__c</columns>
    <columns>breadwinner_qbo__MarkupInfo__c</columns>
    <columns>breadwinner_qbo__Tax__c</columns>
    <columns>breadwinner_qbo__Customer__c</columns>
    <columns>breadwinner_qbo__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>